# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt
GameEngine/: CMakeLists.txt  Camera.h  GameEngine.cpp  Object.h  Utilities.h  Utils.h
GameEngine/Assets/Models/: Monkey.model
GameEngine/Assets/Shaders/: Skybox.vert  Test.frag  Test.vert  TestShader.frag  TestShader.vert
GameEngine/Engine/: Core.h  Device.h  EventSystem.h  FileSystem.h  Objects.h  Renderer.h
GameEngine/Engine/Core/: Buffers.h  Framebuffer.h  Shaders.h  Texture.h  VertexArray.h
GameEngine/Engine/Device/: Input.h  Screen.h  Time.h
GameEngine/Engine/EventSystem/: Event.h
GameEngine/Engine/FileSystem/: File.h  MeshLoader.h
GameEngine/Engine/Objects/: Camera.h  GeometryContainer.h  Instance.h  Instances.h  Material.h  Mesh.h  Scene.h  Transform.h
GameEngine/Engine/Objects/Instances/: Object.h
GameEngine/Scripts/: ScriptBehaviour.h
GameEngine/Shaders/: TestShader.frag  TestShader.vert
GameEngine/glad/include/glad/: glad.h
GameEngine/glad/src/: glad.c
Include/glm/gtc/: type_ptr.inl
Include/stb/: stb_image.h
